--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Mechatronic Design and Non-Commutative Behavior of a Cable-Driven Tensegrity Manipulator"
 collection: talks
-type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, CA, USA"
+category: posters
+permalink: /talks/2025-23-05-Tensegrity-Manipulator
+venue: "IEEE ICRA 2025 Soft Robotics for Space Applications Workshop"
+date: 2025-23-05
+location: "Atlanta, GA, USA"
 ---
 
 This is a description of your talk, which is a markdown file that can be all markdown-ified like any other post. Yay markdown!
