removed large files

--- a/_publications/2022-06-01-UA_L-DoTT.md
+++ b/_publications/2022-06-01-UA_L-DoTT.md
@@ -6,9 +6,9 @@ permalink: /publication/2022-06-01-UA_L-DoTT
 excerpt: 'UA_L-DoTT (University of Alabama’s Large Dataset of Trains and Trucks) is a collection of camera images and 3D LiDAR point cloud scans from five different data sites. Four of the data sites targeted trains on railways and the last targeted trucks on a four-lane highway. Low light conditions were present at one of the data sites showcasing unique differences between individual sensor data. The final data site utilized a mobile platform which created a large variety of viewpoints in images and point clouds. The dataset consists of 93,397 raw images, 11,415 corresponding labeled text files, 354,334 raw point clouds, 77,860 corresponding labeled point clouds, and 33 timestamp files. These timestamps correlate images to point cloud scans via POSIX time. The data was collected with a sensor suite consisting of five different LiDAR sensors and a camera. This provides various viewpoints and features of the same targets due to the variance in operational characteristics of the sensors. The inclusion of both raw and labeled data allows users to get started immediately with the labeled subset, or label additional raw data as needed. This large dataset is beneficial to any researcher interested in machine learning using cameras, LiDARs, or both. The current dataset is publicly available at UA_L-DoTT.'
 date: 2022-06-01
 venue: 'Data in Brief'
-#slidesurl: 'https://academicpages.github.io/files/slides1.pdf'
-paperurl: 'https://academicpages.github.io/files/UA_L-DoTT.pdf'
-bibtexurl: 'https://academicpages.github.io/files/UA_L-DoTT.bib'
+#slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
+paperurl: 'https://lefaris.github.io/files/UA_L-DoTT.pdf'
+bibtexurl: 'https://lefaris.github.io/files/UA_L-DoTT.bib'
 citation: 'Eastepp, M., Faris, L., & Ricks, K. (2022). UA_L-Dott: University of Alabama’s large dataset of trains and trucks. Data in Brief, 42, 108073. https://doi.org/10.1016/j.dib.2022.108073.'
 ---
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
