--- a/_publications/2022-03-15-dataset.md
+++ b/_publications/2022-03-15-dataset.md
@@ -11,4 +11,11 @@ paperurl: 'https://lefaris.github.io/files/UA_L-DoTT.pdf'
 bibtexurl: 'https://lefaris.github.io/files/UA_L-DoTT.bib'
 citation: 'Eastepp, M., Faris, L., & Ricks, K. (2022). UA_L-Dott: University of Alabama’s large dataset of trains and trucks - Dataset Repository. Figshare+. Dataset. https://doi.org/10.25452/figshare.plus.19311938.v1.'
 ---
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+This is a companion dataset that was crafted and made publicly available as part of the dataset paper, and in support of the semantic segmentation paper, both cited below.
+
+Semantic segmentation paper: '**Ervin, L.<sup>✉</sup>**; Eastepp, M.; McVicker, M.; Ricks, K. Evaluation of Semantic Segmentation Performance for a Multimodal Roadside Vehicle Detection System on the Edge. Sensors 2025, 25, 370. https://doi.org/10.3390/s25020370.'
+
+Dataset paper: 'Eastepp, M.<sup>✉</sup>, **Faris, L.**, & Ricks, K. (2022). UA_L-Dott: University of Alabama’s large dataset of trains and trucks. Data in Brief, 42, 108073. https://doi.org/10.1016/j.dib.2022.108073.'
+
+
+
