--- a/_publications/2022-03-15-dataset.md
+++ b/_publications/2022-03-15-dataset.md
@@ -9,7 +9,7 @@ venue: 'figshare'
 #slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 paperurl: 'https://lefaris.github.io/files/UA_L-DoTT.pdf'
 bibtexurl: 'https://lefaris.github.io/files/UA_L-DoTT.bib'
-citation: 'Eastepp, M., Faris, L., & Ricks, K. (2022). UA_L-Dott: University of Alabama’s large dataset of trains and trucks - Dataset Repository. Figshare+. Dataset. https://doi.org/10.25452/figshare.plus.19311938.v1.'
+citation: 'Eastepp, M.<sup>✉</sup>, **Faris, L.**, & Ricks, K. (2022). UA_L-Dott: University of Alabama’s large dataset of trains and trucks - Dataset Repository. Figshare+. Dataset. https://doi.org/10.25452/figshare.plus.19311938.v1.'
 ---
 This is a companion dataset that was crafted and made publicly available as part of the dataset paper, and in support of the semantic segmentation paper, both cited below.
 
