--- a/_publications/2018-06-26-hackaday.md
+++ b/_publications/2018-06-26-hackaday.md
@@ -4,8 +4,9 @@ collection: publications
 category: blog
 permalink: https://hackaday.com/author/lefaris/
 excerpt: 'This is a collection of 13 articles I wrote for the Hackaday website in 2017 and 2018.
-1. LEGO: The Kristiansen Legocy
-2. 360 Live VR Teleportation Uses Drones, Neural Networks, and Perseverance'
+1. LEGO: The Kristiansen Legocy\
+2. 360 Live VR Teleportation Uses Drones, Neural Networks, and Perseverance\
+'
 date: 2018-06-26
 venue: 'Hackaday'
 ---
