hackaday spacing again

--- a/_publications/2018-06-26-hackaday.md
+++ b/_publications/2018-06-26-hackaday.md
@@ -4,18 +4,18 @@ collection: publications
 category: blog
 permalink: https://hackaday.com/author/lefaris/
 excerpt: 'This is a collection of 13 articles I wrote for the Hackaday website in 2017 and 2018.
-1. LEGO: The Kristiansen Legocy  
-2. 360 Live VR Teleportation Uses Drones, Neural Networks, and Perseverance  
-3. Tube Amps are Still Tubular in 2018  
-4. The 348,296th Article about Cryptocurrency  
-5. Meet the Modern Meat Man's Modified Meat-Safe  
-6. AMSAT MPPT Goes to Infinity and Beyond  
-7. This DIY Turntable Just Got Freaky Fresh  
-8. LEDs Give HP 3457A DDM's LCD Display the Boot  
-9. Blast from the Past with Space Station PROM Reader  
-10. Teensy Script Plays Nintendo Switch, Strikes Out  
-11. Artificial Intelligence at the Top of a Professional Sport  
-12. Soon You'll Sit Inside a Robot's Head at Work  
+1. LEGO: The Kristiansen Legocy<br>
+2. 360 Live VR Teleportation Uses Drones, Neural Networks, and Perseverance<br>
+3. Tube Amps are Still Tubular in 2018<br>
+4. The 348,296th Article about Cryptocurrency<br>
+5. Meet the Modern Meat Man's Modified Meat-Safe<br>
+6. AMSAT MPPT Goes to Infinity and Beyond<br>
+7. This DIY Turntable Just Got Freaky Fresh<br>
+8. LEDs Give HP 3457A DDM's LCD Display the Boot<br>
+9. Blast from the Past with Space Station PROM Reader<br>
+10. Teensy Script Plays Nintendo Switch, Strikes Out<br>
+11. Artificial Intelligence at the Top of a Professional Sport<br>
+12. Soon You'll Sit Inside a Robot's Head at Work<br>
 13. Need a Night-Light?'
 date: 2018-06-26
 venue: 'Hackaday'
