--- a/_publications/2018-06-26-hackaday.md
+++ b/_publications/2018-06-26-hackaday.md
@@ -2,25 +2,25 @@
 title: "Hackaday Articles"
 collection: publications
 category: blog
-permalink: https://hackaday.com/author/lefaris/
-excerpt: 'This is a collection of 13 articles I wrote for the Hackaday website in 2017 and 2018.
-1. LEGO: The Kristiansen Legocy<br>
-2. 360 Live VR Teleportation Uses Drones, Neural Networks, and Perseverance<br>
-3. Tube Amps are Still Tubular in 2018<br>
-4. The 348,296th Article about Cryptocurrency<br>
-5. Meet the Modern Meat Man's Modified Meat-Safe<br>
-6. AMSAT MPPT Goes to Infinity and Beyond<br>
-7. This DIY Turntable Just Got Freaky Fresh<br>
-8. LEDs Give HP 3457A DDM's LCD Display the Boot<br>
-9. Blast from the Past with Space Station PROM Reader<br>
-10. Teensy Script Plays Nintendo Switch, Strikes Out<br>
-11. Artificial Intelligence at the Top of a Professional Sport<br>
-12. Soon You'll Sit Inside a Robot's Head at Work<br>
-13. Need a Night-Light?'
+permalink: /publication/2018-06-26-hackaday
+excerpt: 'This is a collection of 13 articles I wrote for the Hackaday website in 2017 and 2018.'
 date: 2018-06-26
 venue: 'Hackaday'
 ---
 
+1. [LEGO: The Kristiansen Legocy](https://hackaday.com/2018/06/26/ole-kirk-kristiansen-and-the-lego-frontier/)<br>
+2. [360 Live VR Teleportation Uses Drones, Neural Networks, and Perseverance](https://hackaday.com/2018/05/30/360-live-vr-teleportation-using-drones-neural-networks-and-perseverance/)<br>
+3. [Tube Amps are Still Tubular in 2018](https://hackaday.com/2018/01/09/tube-amps-are-still-tubular-in-2018/)<br>
+4. [The 348,296th Article about Cryptocurrency](https://hackaday.com/2018/01/09/the-348296th-article-about-cryptocurrency/)<br>
+5. [Meet the Modern Meat Man's Modified Meat-Safe](https://hackaday.com/2017/12/03/meet-the-modern-meat-mans-modified-meat-safe/)<br>
+6. [AMSAT MPPT Goes to Infinity and Beyond](https://hackaday.com/2017/11/27/amsat-mppt-goes-to-infinity-and-beyond/)<br>
+7. [This DIY Turntable Just Got Freaky Fresh](https://hackaday.com/2017/11/24/this-diy-turntable-just-got-freaky-fresh/)<br>
+8. [LEDs Give HP 3457A DDM's LCD Display the Boot](https://hackaday.com/2017/11/15/leds-give-hp-3457a-ddms-lcd-display-the-boot/)<br>
+9. [Blast from the Past with Space Station PROM Reader](https://hackaday.com/2017/11/09/blast-from-the-past-with-space-station-prom-reader/)<br>
+10. [Teensy Script Plays Nintendo Switch, Strikes Out](https://hackaday.com/2017/10/25/teensy-script-plays-nintendo-switch-strikes-out/)<br>
+11. [Artificial Intelligence at the Top of a Professional Sport](https://hackaday.com/2017/10/20/openais-world-champion/)<br>
+12. [Soon You'll Sit Inside a Robot's Head at Work](https://hackaday.com/2017/10/10/soon-youll-sit-inside-a-robots-head-at-work/)<br>
+13. [Need a Night-Light?](https://hackaday.com/2017/09/19/need-a-night-light/)'
 
 
 
