--- a/_publications/2018-06-26-hackaday.md
+++ b/_publications/2018-06-26-hackaday.md
@@ -20,7 +20,7 @@ venue: 'Hackaday'
 10. [Teensy Script Plays Nintendo Switch, Strikes Out](https://hackaday.com/2017/10/25/teensy-script-plays-nintendo-switch-strikes-out/)<br>
 11. [Artificial Intelligence at the Top of a Professional Sport](https://hackaday.com/2017/10/20/openais-world-champion/)<br>
 12. [Soon You'll Sit Inside a Robot's Head at Work](https://hackaday.com/2017/10/10/soon-youll-sit-inside-a-robots-head-at-work/)<br>
-13. [Need a Night-Light?](https://hackaday.com/2017/09/19/need-a-night-light/)'
+13. [Need a Night-Light?](https://hackaday.com/2017/09/19/need-a-night-light/)
 
 
 
