talks and posters

--- a/_talks/2023-08-20-dexter.md
+++ b/_talks/2023-08-20-dexter.md
@@ -9,7 +9,7 @@ location: "Boston, MA, USA"
 #slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 ---
 
-![FIU ECE Department Invited Talk](../images/FIU_talk.jpg "FIU ECE Department Invited Talk")
+![FIU ECE Department Invited Talk](../images/dexter_talk.png "FIU ECE Department Invited Talk")
 
 This is a description of your talk, which is a markdown file that can be all markdownified like any other post. Yay markdown!
 
