updated talk descriptions

--- a/_talks/2023-08-20-dexter.md
+++ b/_talks/2023-08-20-dexter.md
@@ -1,16 +1,17 @@
 ---
 title: "Design and Modeling Framework for DexTeR: Dexterous Continuum Tensegrity ManipulatoR"
 collection: talks
-category: talks
+type: "Talk"
 permalink: /talks/2023-08-20-dexter
 venue: "International Design Engineering Technical Conference (IDETC) 2023"
 date: 2023-08-20
 location: "Boston, MA, USA"
-#slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 ---
 
-![FIU ECE Department Invited Talk](../images/dexter_talk.png "FIU ECE Department Invited Talk")
+![IDETC DexTeR Talk](../images/dexter_talk.png "IDETC DexTeR Talk")
+[IDETC DexTeR presentation slides here](https://lefaris.github.io/files/IDETC_DexTeR.pdf)
 
-This is a description of your talk, which is a markdown file that can be all markdownified like any other post. Yay markdown!
 
+I gave a talk for a fellow ARL lab member that was not able to attend IDETC 2023.  This talk discussed the overall 
+design framework of a tensegrity continuum manipulator, which I later extended.
 
