--- a/_talks/2023-08-20-idetc.md
+++ b/_talks/2023-08-20-idetc.md
@@ -1,16 +1,17 @@
 ---
 title: "Design and Modeling of the Mobile Spherical Tensegrity eXploratory Robot (TeXploR)"
 collection: talks
-category: posters
+type: "Poster"
 permalink: /talks/2023-08-20-idetc
 venue: "ASME International Design Engineering Technical Conference (IDETC) 2023"
 date: 2023-08-20
 location: "Boston, MA, USA"
-#slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 ---
 
 ![IDETC 2023 Poster Session](../images/IDETC_poster.png "IDETC 2023 Poster Session")
+[TeXploR poster link here](https://lefaris.github.io/files/TeXploreR_IDETC_2023.pdf)
 
-This is a description of your talk, which is a markdown file that can be all markdownified like any other post. Yay markdown!
+I am grateful for receiving the [NSF BPart Fellowship](https://lefaris.github.io//awards/) which allowed me to 
+present my work on static modeling of a mobile, rolling tensegrity robot at IDETC 2023.
 
 
