--- a/_talks/2023-12-05-TeXploR.md
+++ b/_talks/2023-12-05-TeXploR.md
@@ -1,16 +1,20 @@
 ---
 title: "Design and Modeling of the Mobile Spherical Tensegrity eXploratory Robot (TeXploR) - **1st Place Award**"
 collection: talks
-category: posters
+type: "Poster"
 permalink: /talks/2023-12-05-TeXploR
 venue: "ECE Department Graduate Poster Competition"
 date: 2023-12-05
 location: "Tuscaloosa, AL, USA"
-#slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 ---
 
-![1st Place Award ECE Department Graduate Poster Competition](../images/ECE_poster_competition_Texplor.png "1st Place Award ECE Department Graduate Poster Competition")
+![1st Place Award ECE Department Graduate Poster Competition](../images/ECE_poster_competition_Texplor.png "1st 
+Place Award ECE Department Graduate Poster Competition")
 
-This is a description of your talk, which is a markdown file that can be all markdownified like any other post. Yay markdown!
+![TeXploR ECE Poster Competition](../images/TeXploreR_IDETC_2023.png "TeXploR ECE Poster Competition")
+[TeXploR poster link here](https://lefaris.github.io/files/TeXploreR_IDETC_2023.pdf)
+
+I presented my work on static modeling of a rolling tensegrity robot in the first UA ECE graduate student poster 
+competition in December 2023 and was lucky enough to win 1st place.
 
 
