--- a/_talks/2024-11-15-FIU.md
+++ b/_talks/2024-11-15-FIU.md
@@ -1,16 +1,17 @@
 ---
 title: "Design and Modeling of Mobile Tensegrity Rolling Robot"
 collection: talks
-category: talks
+type: "Talk"
 permalink: /talks/2024-11-15-FIU
 venue: "FIU ECE Department"
 date: 2024-11-15
 location: "Miami, FL, USA"
-#slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 ---
 
 ![FIU ECE Department Invited Talk](../images/FIU_talk.jpg "FIU ECE Department Invited Talk")
+[FIU invited talk slides link here](https://lefaris.github.io/files/TensegrityResearchFIUSeminar11152024.pdf)
 
-This is a description of your talk, which is a markdown file that can be all markdownified like any other post. Yay markdown!
+I was invited to give a talk in the FIU ECE Department seminar series in 2024.  I presented broadly on my background 
+and the field of tensegrity systems and then discussed my contributions.
 
 
