--- a/_talks/2025-05-21-ICRA-Expo.md
+++ b/_talks/2025-05-21-ICRA-Expo.md
@@ -1,16 +1,17 @@
 ---
 title: "IEEE ICRA 2025 Expo Showcasing ARL Robots (Tensegrity + Soft)"
 collection: talks
-category: posters
+type: "Poster"
 permalink: /talks/2025-05-21-ICRA-Expo
 venue: "IEEE ICRA 2025"
 date: 2025-05-21
 location: "Atlanta, GA, USA"
-#slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 ---
 
 ![IEEE ICRA 2025 Expo](../images/ICRA_expo.jpg "IEEE ICRA 2025 Expo")
 
-This is a description of your talk, which is a markdown file that can be all markdownified like any other post. Yay markdown!
+I had a great time leading a booth with two other ARL members at the IEEE ICRA 2025 Expo.  We were one of a few teams 
+selected to showcase our research, and it was a ton of fun showing working demos to people at ICRA and getting live 
+feedback.
 
 
