--- a/_talks/2024-03-17-ecedha.md
+++ b/_talks/2024-03-17-ecedha.md
@@ -1,16 +1,19 @@
 ---
 title: "Lauren Elizabeth Ervin"
 collection: talks
-category: posters
+type: "Poster"
 permalink: /talks/2024-03-17-ecedha
 venue: "ECE Department Heads Association (ECEDHA) Conference 2024"
 date: 2024-03-17
 location: "Tucson, AZ, USA"
-#slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 ---
 
 ![ECEDHA 2024 Poster Session](../images/ECEDHA_poster.png "ECEDHA 2024 Poster Session")
 
-This is a description of your talk, which is a markdown file that can be all markdownified like any other post. Yay markdown!
+![NSF iREDEFINE Poster](../images/iREDEFINE_Lauren_Ervin_Poster_2024.png "NSF iREDEFINE Poster")
+[ECEDHA poster link here](https://lefaris.github.io/files/iREDEFINE_Lauren_Ervin_Poster_2024.pdf)
+
+I am grateful for being a recipient of the NSF iREDEFINE award where I attended the 2024 ECEDHA conference and 
+presented a poster discussing my background, research contributions, and teaching experience.
 
 
