--- a/_talks/2024-12-09-AgBot.md
+++ b/_talks/2024-12-09-AgBot.md
@@ -1,16 +1,19 @@
 ---
 title: "Design and Modeling of Ruggedized Agriculture RoBot (AgBot) - **2nd Place Award**"
 collection: talks
-category: posters
+type: "Poster"
 permalink: /talks/2024-12-09-AgBot
 venue: "ECE Department Graduate Poster Competition"
 date: 2024-12-09
 location: "Tuscaloosa, AL, USA"
-#slidesurl: 'https://lefaris.github.io/files/slides1.pdf'
 ---
 
-![IEEE ICRA 2025 Workshop Posters](../images/ICRA_workshop_posters.jpg "IEEE ICRA 2025 Workshop Posters")
+![2nd Place Award ECE Department Graduate Poster Competition](../images/AgBot_Poster_Competition_2024.png "2nd Place 
+Award ECE Department Graduate Poster Competition")
+[AgBot poster link here](https://lefaris.github.io/files/AgBot_Poster_Competition_2024.pdf)
 
-This is a description of your talk, which is a markdown file that can be all markdownified like any other post. Yay markdown!
+I presented my work on developing a mobile robot equipped with a tensegrity continuum manipulator tailed for 
+agriculture applications in the UA ECE graduate student poster competition in December 2024 and was lucky enough to 
+win 2nd place.
 
 
