fixed talk links

--- a/_talks/2023-08-20-dexter.md
+++ b/_talks/2023-08-20-dexter.md
@@ -12,6 +12,6 @@ location: "Boston, MA, USA"
 [IDETC DexTeR presentation slides here](https://lefaris.github.io/files/IDETC_DexTeR.pdf)
 
 
-I gave a talk for a fellow ARL lab member that was not able to attend IDETC 2023.  This talk discussed the overall 
+I gave a talk for a fellow ARL member that was not able to attend IDETC 2023.  This talk discussed the overall 
 design framework of a tensegrity continuum manipulator, which I later extended.
 
