--- a/_talks/2023-08-20-idetc.md
+++ b/_talks/2023-08-20-idetc.md
@@ -9,7 +9,7 @@ location: "Boston, MA, USA"
 ---
 
 ![IDETC 2023 Poster Session](../images/IDETC_poster.png "IDETC 2023 Poster Session")
-[TeXploR poster link here](https://lefaris.github.io/files/TeXploreR_IDETC_2023.pdf)
+[TeXploR static modeling poster link here](https://lefaris.github.io/files/TeXploreR_IDETC_2023.pdf)
 
 I am grateful for receiving the [NSF BPart Fellowship](https://lefaris.github.io//awards/) which allowed me to 
 present my work on static modeling of a mobile, rolling tensegrity robot at IDETC 2023.
